[workspace]
members = [".", "crates/*", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sorella Labs"]
repository = "https://github.com/SorellaLabs/uni-v4"

[workspace.dependencies]
uni-v4-common = { path = "crates/uni-v4-common", default-features = false }
uni-v4-structure = { path = "crates/uni-v4-structure", default-features = false }
uni-v4-upkeeper = { path = "crates/uni-v4-upkeeper", default-features = false }

# External dependencies
alloy-contract = { version = "1.8.2", default-features = false }
alloy-consensus = { version = "1.8.2", default-features = false }
alloy-eips = { version = "1.8.2", default-features = false }
alloy-network = { version = "1.8.2", default-features = false }
alloy-provider = { version = "1.8.2", default-features = false, features = [
  "reqwest",
  "ws",
  "rpc-api",
  "anvil-node",
] }
alloy-rpc-types = { version = "1.8.2", default-features = false, features = [
  "eth",
] }
alloy-sol-types = { version = "1.5.6", default-features = false, features = [
  "json",
] }
alloy-primitives = { version = "1.5.6", default-features = false, features = [
  "map-foldhash",
  "rand",
] }
jsonrpsee = { version = "0.26.0", features = ["ws-client", "macros", "client"] }
arraydeque = "0"
async-trait = "0.1"
auto_impl = "1"
base64 = "0.22"
dashmap = { version = "6", features = ["serde"] }
eyre = "0"
futures = "0"
futures-util = "0"
hex = "0.4.3"
itertools = "0"
malachite = "0.4"
malachite-q = "0.4"
pade = { git = "https://github.com/SorellaLabs/pade.git", branch = "main" }
pade-macro = { git = "https://github.com/SorellaLabs/pade.git", branch = "main" }
rand = "0.9.0"
rayon = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.47.1", features = [
  "full",
  "tracing",
], default-features = false }
tracing = "0"
tracing-subscriber = "0.3.19"
uniswap_v3_math = { git = "https://github.com/SorellaLabs/v3-math", branch = "main" }
# op-alloy-rpc-types = { version = "0.24.0", default-features = false }
# op-alloy-network = { version = "0.24.0", default-features = false }
op-alloy-network = { git = "https://github.com/ethereum-optimism/optimism", rev = "1e3ee25", default-features = false }
op-alloy-rpc-types = { git = "https://github.com/ethereum-optimism/optimism", rev = "1e3ee25", default-features = false }
