[package]
name = "uni-v4-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
dashmap.workspace = true
eyre.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uni-v4-structure.workspace = true
uniswap_v3_math.workspace = true
alloy-contract.workspace = true
alloy-sol-types.workspace = true
