[package]
name = "uni-v4-structure"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
eyre.workspace = true
itertools.workspace = true
malachite.workspace = true
serde.workspace = true
uniswap_v3_math.workspace = true
alloy-network.workspace = true
op-alloy-network.workspace = true
alloy-contract.workspace = true
alloy-sol-types.workspace = true
