[package]
name = "uni-v4-upkeeper"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
uni-v4-common.workspace = true
uni-v4-structure.workspace = true

# External dependencies
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-contract.workspace = true
alloy-consensus.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
jsonrpsee.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uniswap_v3_math.workspace = true

[build-dependencies]
convert_case = "0"
alloy-sol-types.workspace = true
itertools.workspace = true
